kubernetes/flask.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: uusirss
---
apiVersion: v1
kind: Service
metadata:
  name: flask
  namespace: uusirss
  labels:
    app: flask
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 30781
  selector:
    app: flask
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: flask-set
  namespace: uusirss
spec:
  selector:
    matchLabels:
      app: flask
  serviceName: flask
  replicas: 1
  updateStrategy:
    type: RollingUpdate
#    rollingUpdate:
#      maxUnavailable: 0
#      maxSurge: 1
  template:
    metadata:
      namespace: uusirss
      labels:
        app: flask
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - image: ghcr.io/ardcoras/uusirss:master
          name: flask
          imagePullPolicy: Always
          ports:
            - containerPort: 30781
              name: flask
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: flask-route
  namespace: uusirss
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`uusirss.ardcoras.fi`)
      kind: Rule
      middlewares:
        - name: headers-default@file
      services:
        - name: flask
          port: 80
